--- a/style.css
+++ b/style.css
@@ -29,10 +29,11 @@ article {
     margin: 0 auto 32px;
     padding: 6px 15px;
     border-bottom: 1px solid rgb(125, 125, 125);
+    background-color: rgba(240, 243, 220, 0.5);
 }
 
 article:nth-child(even) {
-    background-color: rgba(233, 252, 65, 0.5);
+    background-color: rgba(220, 243, 242, 0.5);
 }
 
 article a {
@@ -66,6 +67,11 @@ article img {
     width: 100%;
     height: 300px;
     object-fit: cover;
+}
+
+p {
+    font-size: 18px;
+    text-align: justify;
 }
 
 footer {
