--- a/style.css
+++ b/style.css
@@ -46,7 +46,8 @@ article a:hover {
 }
 
 .new::after {
-    content: " New";
+    content: "New";
+    margin-left: 10px;
     color: rgba(255, 66, 66, 0.8);
     font-size: 14px;
     font-style: italic;
@@ -56,6 +57,7 @@ article a:hover {
 article h2 {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin-bottom: 5px;
+    color: rgb(0, 0, 77);
 }
 
 .article-meta {
@@ -72,6 +74,10 @@ article img {
 p {
     font-size: 18px;
     text-align: justify;
+}
+
+p::first-letter {
+    font-weight: bold;
 }
 
 footer {
